--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 body {
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   margin: 0;
   font-size: 1.5em;
   text-align: center;
-  background-color: #3e285c;
+
   color: whitesmoke;
+  background-image: url('/public/img/background.jpg');
+  background-size: cover;
 }
 .app {
   max-width: 1000px;
@@ -31,4 +33,28 @@ button:hover {
   color: darkcyan;
   transition: 1.5s;
   text-decoration: underline;
+}
+.card-grid {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+.card {
+  width: 250px;
+  height: 350px;
+  border-radius: 8px;
+}
+.card:hover {
+  box-shadow: 1rem 1rem 1rem black;
+  transition: 1.5s;
+}
+.card img {
+  width: 100%;
+  height: 60%;
+  object-fit: cover;
+}
+
+.card .back {
+  height: 50%;
 }
