--- a/src/App.css
+++ b/src/App.css
@@ -56,5 +56,12 @@ button:hover {
 }
 
 .card .back {
-  height: 50%;
+  height: 100%;
+}
+.card .front {
+  transform: rotateY(90deg);
+  position: absolute;
+}
+.flipped .front {
+  transform: rotateY(0deg);
 }
