add some styling

--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,18 @@ button:hover {
 
 .card .back {
   height: 100%;
+  transition-delay: 0.2s;
 }
 .card .front {
   transform: rotateY(90deg);
+  transition: all ease-in 0.2s;
   position: absolute;
 }
 .flipped .front {
   transform: rotateY(0deg);
+  transition-delay: 0.2s;
+}
+.flipped .back {
+  transform: rotateY(90deg);
+  transition-delay: 0s;
 }
