--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,16 @@ body {
   margin: 0;
   font-size: 1.5em;
   text-align: center;
-
   color: whitesmoke;
   background-image: url('/public/img/background.jpg');
   background-size: cover;
 }
+
 .app {
   max-width: 1000px;
   margin: 40px auto;
 }
+
 button {
   border: 2px solid whitesmoke;
   padding: 1rem 1rem;
@@ -22,6 +23,7 @@ button {
   cursor: pointer;
   font-size: 2rem;
 }
+
 button:hover {
   background-color: darkblue;
   color: wheat;
@@ -29,55 +31,68 @@ button:hover {
   border-color: black;
   box-shadow: 1rem 1rem 1rem black;
 }
+
 .mainContainer-h1:hover {
   color: darkcyan;
   transition: 1.5s;
   text-decoration: underline;
 }
+
 .card-grid {
   margin-top: 40px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
+
 .card {
   width: 250px;
   height: 350px;
-  border-radius: 8px;
+  perspective: 1000px;
 }
-.card:hover {
-  box-shadow: 1rem 1rem 1rem black;
-  transition: 1.5s;
+
+.card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
 }
+
+.card.flipped .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-front {
+  background: white;
+  transform: rotateY(180deg);
+}
+
+.card-back {
+  background: url('/img/cover.png');
+  transform: rotateY(0deg);
+}
+
 .card img {
   width: 100%;
-  height: 60%;
+  height: 100%;
   object-fit: cover;
 }
 
-.card .back {
-  height: 100%;
-  transition-delay: 0.2s;
-}
-.card .front {
-  transform: rotateY(90deg);
-  transition: all ease-in 0.2s;
-  position: absolute;
-}
-.flipped .front {
-  transform: rotateY(0deg);
-  transition-delay: 0.2s;
-}
-.flipped .back {
-  transform: rotateY(90deg);
-  transition-delay: 0s;
-}
 .gamePanel {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 3rem;
 }
+
 p {
   font-size: 2rem;
 }
