--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ button:hover {
 
 .card-inner {
   width: 100%;
-  height: 100%;
+  height: 80%;
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s;
@@ -77,6 +77,7 @@ button:hover {
 
 .card-back {
   background: url('/img/cover.png');
+  background-size: cover;
   transform: rotateY(0deg);
 }
 
