--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
 
 button {
   border: 2px solid whitesmoke;
-  padding: 1rem 1rem;
+  padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
   font-weight: bold;
   cursor: pointer;
@@ -92,6 +92,7 @@ button:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 3rem;
 }
 
