--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   text-align: center;
   color: whitesmoke;
   background-image: url('/public/img/background.jpg');
-  background-size: cover;
+  background-size: auto;
 }
 
 .app {
@@ -45,14 +45,14 @@ button:hover {
 .card-grid {
   margin-top: 40px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Default to 4 columns */
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   width: 100%;
 }
 
 .card {
   width: 100%;
-  aspect-ratio: 1 / 1; /* Maintains aspect ratio of cards */
+  aspect-ratio: 1 / 1;
   perspective: 1000px;
   cursor: pointer;
 }
